Added an analysis module for sched_wakeup  sched switch latency
In this patch, an analysis module has been added in order to
observe  the latency between sched_wakeup and sched_switch
events for the corresponding threads

Change-Id: Icb0e7854945c2a0de0eee86bc06366969520d74f
Signed-off-by: Abdellah Rahmani <rahmaniabdellah1994@gmail.com>

--- a/analyses/org.eclipse.tracecompass.incubator.kernel.core/plugin.xml
+++ b/analyses/org.eclipse.tracecompass.incubator.kernel.core/plugin.xml
@@ -36,6 +36,17 @@
                class="org.eclipse.tracecompass.tmf.core.trace.TmfTrace">
          </tracetype>
       </module>
+      <module
+            analysis_module="org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.SWSLatencyAnalysis"
+            applies_experiment="false"
+            automatic="false"
+            icon="icons/wakeup.png"
+            id="org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.sws"
+            name="%analysis.swsLatency.wakeupswitch">
+         <tracetype
+               class="org.eclipse.tracecompass.tmf.core.trace.TmfTrace">
+         </tracetype>
+      </module>
    </extension>
    <extension
          point="org.eclipse.tracecompass.tmf.core.dataprovider">
