--- a/analyses/org.eclipse.tracecompass.incubator.kernel.ui/plugin.properties
+++ b/analyses/org.eclipse.tracecompass.incubator.kernel.ui/plugin.properties
@@ -18,3 +18,7 @@ view.ioperprocess = I/O Per Process (Incubator)
 view.diskrequests Disk Requests (Incubator)
 view.iowait.stats = Wait Queue Statistics (Incubator)
 view.ioexec.stats = Exec Queue Statistics (Incubator)
+swslatency.table.view.name = Sched_Wakeup/Switch Latencies
+swslatency.scatter.view.name = Sched_Wakeup/Switch Latency vs Time
+swslatency.stats.view.name = Sched_Wakeup/Switch Latency Statistics
+swslatency.density.view.name = Sched_Wakeup/Switch Density
