--- a/analyses/org.eclipse.tracecompass.incubator.kernel.ui/plugin.xml
+++ b/analyses/org.eclipse.tracecompass.incubator.kernel.ui/plugin.xml
@@ -5,6 +5,40 @@
          point="org.eclipse.ui.views">
       <view
             category="org.eclipse.linuxtools.lttng2.ui.views.category"
+            class="org.eclipse.tracecompass.analysis.timing.ui.views.segmentstore.table.SegmentStoreTableView"
+            icon="icons/obj16/latency.png"
+            id="org.eclipse.tracecompass.analysis.timing.ui.segstore.table:org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.sws"
+            name="%swslatency.table.view.name"
+            restorable="true">
+      </view>
+      <view
+            allowMultiple="false"
+            category="org.eclipse.linuxtools.lttng2.ui.views.category"
+            class="org.eclipse.tracecompass.incubator.internal.kernel.ui.views.swslatency.SWSLatencyScatterView"
+            icon="icons/obj16/scatter.png"
+            id="org.eclipse.tracecompass.incubator.kernel.ui.swsscatter"
+            name="%swslatency.scatter.view.name"
+            restorable="true">
+      </view>
+      <view
+            allowMultiple="false"
+            category="org.eclipse.linuxtools.lttng2.ui.views.category"
+            class="org.eclipse.tracecompass.analysis.timing.ui.views.segmentstore.statistics.SegmentStoreStatisticsView"
+            icon="icons/obj16/statistics_view.gif"
+            id="org.eclipse.tracecompass.analysis.timing.ui.segstore.statistics:org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.sws"
+            name="%swslatency.stats.view.name"
+            restorable="true">
+      </view>
+      <view
+            category="org.eclipse.linuxtools.lttng2.ui.views.category"
+            class="org.eclipse.tracecompass.incubator.internal.kernel.ui.views.swslatency.SWSLatencyDensityView"
+            icon="icons/obj16/density.png"
+            id="org.eclipse.tracecompass.incubator.kernel.ui.swsdensity"
+            name="%swslatency.density.view.name"
+            restorable="true">
+      </view>
+      <view
+            category="org.eclipse.linuxtools.lttng2.ui.views.category"
             class="org.eclipse.tracecompass.incubator.internal.kernel.ui.views.fileaccess.FileAccessByFileView"
             id="org.eclipse.tracecompass.incubator.kernel.ui.filebyfile"
             icon="icons/obj16/file_obj.gif"
@@ -97,6 +131,34 @@
             id="org.eclipse.tracecompass.kernel.core.inputoutput.execqueue.view.statistics">
          <analysisModuleClass
                class="org.eclipse.tracecompass.internal.analysis.os.linux.core.inputoutput.InputOutputAnalysisModule">
+         </analysisModuleClass>
+      </output>
+      <output
+            class="org.eclipse.tracecompass.tmf.ui.analysis.TmfAnalysisViewOutput"
+            id="org.eclipse.tracecompass.analysis.timing.ui.segstore.table:org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.sws">
+         <analysisModuleClass
+               class="org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.SWSLatencyAnalysis">
+         </analysisModuleClass>
+      </output>
+      <output
+            class="org.eclipse.tracecompass.tmf.ui.analysis.TmfAnalysisViewOutput"
+            id="org.eclipse.tracecompass.incubator.kernel.ui.swsscatter">
+         <analysisModuleClass
+               class="org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.SWSLatencyAnalysis">
+         </analysisModuleClass>
+      </output>
+      <output
+            class="org.eclipse.tracecompass.tmf.ui.analysis.TmfAnalysisViewOutput"
+            id="org.eclipse.tracecompass.analysis.timing.ui.segstore.statistics:org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.sws">
+         <analysisModuleClass
+               class="org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.SWSLatencyAnalysis">
+         </analysisModuleClass>
+      </output>
+      <output
+            class="org.eclipse.tracecompass.tmf.ui.analysis.TmfAnalysisViewOutput"
+            id="org.eclipse.tracecompass.incubator.kernel.ui.swsdensity">
+         <analysisModuleClass
+               class="org.eclipse.tracecompass.incubator.internal.kernel.core.swslatency.SWSLatencyAnalysis">
          </analysisModuleClass>
       </output>
    </extension>
